# hello_ollama

./: conversation_history-old.json  conversation_history.json  pyproject.toml
hello_ollama/: app.py  main.py
